base.css
* {
    margin: 0;
    padding: 0;
    border: 0;
    outline: 0;
    font-size: 100%;
    vertical-align: baseline;
    background: transparent;
}

html {
	background: rgb(255, 255, 255);
	color: rgb(34, 34, 34);
	font-family: "Source Sans Variable", -apple-system, sans-serif;
	line-height: 1.5em;
}

header {
	position: fixed;
	width: 100%;
	background: rgb(252, 252, 252);
	border-bottom: 1px solid #ececec;
}

header > h1 {
	margin-top: 16px;
	margin-bottom: 16px;
	font-size: 3em;
	text-align: center;
}

h2 {
	font-size: 2em;
}

h3 {
	font-size: 1.5em;
}

p {
	font-size: 1.1em;
}

a {
	color: rgba(91, 138, 176, 1);
	text-decoration: none;
}

article {
	max-width: 650px;
	margin: 0 auto;
	padding-top: 108px;
	padding-bottom: 68px;
	padding-left: 16px;
	padding-right: 16px;
	text-align: justify;
}

#menu {
    max-width: 650px;
	margin: 0 auto;
    text-align: center;
    padding-bottom: 8px;
}

#menu > a {
    width: calc(100% / 4);
    display: inline-block;
    vertical-align: top;
    font-weight: 700;
    color: rgb(34, 34, 34);
}

#menu > a:hover {
	color: rgb(84, 84, 84);
}

#headshot {
	width: 194px;
	height: 259px;
	border-radius: 8px;
	float: left;
	margin-right: 12px;
}

#footer_menu {
	position: fixed;
    width: 100%;
    bottom: 0;
    background: rgb(252, 252, 252);
    text-align: center;
    padding-top: 12px;
    border-top: 1px solid #ececec;
}

#footer_menu > a {
    width: 24px;
    display: inline-block;
    vertical-align: top;   
    text-align: center;
    padding: 0px 4px 0px 4px;
    margin-bottom: 8px;
    margin-left: 3%;
    margin-right: 3%;
}

